git commit -m "updated different folders"

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Home-FlexWay</title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
-    <link rel="stylesheet" href="styles.css">
+
+    <link rel="stylesheet" href="styles/common.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     <div class="nav-bar">
@@ -81,7 +84,7 @@
                 <h4>Explore</h4>
                 <p><a href="index.html">Home</a></p>
                 <p><a href="#">How it Works</a></p>
-                <p><a href="#">About Us</a></p>
+                <p><a href="about.html">About Us</a></p>
                 <p><a href="#">Roadmap</a></p>
             </div>
             <div class="column">
