--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="links-bar">
         <div class="hlinks">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
